# gamecode-cli

./: CLAUDE.md  Cargo.toml  README.md  RETRY_EXAMPLES.md  tools.yaml
.github/workflows/: release.yml  rust-ci.yml
src/: main.rs  main_old.rs  mcp_client.rs  mcp_protocol.rs  mcp_tool_dispatcher.rs  mcp_tool_registry.rs
src/cmd/: completion.rs  mcp.rs  mod.rs  models.rs  prompts.rs  sessions.rs
