[package]
name = "gamecode-cli"
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["Ed Sweeney <ed@onextent.com>"]
description = "CLI for AWS Bedrock Anthropic Claude with gamecode-tools integration"

[dependencies]
gamecode-tools = { git = "https://github.com/navicore/gamecode-tools" }
gamecode-prompt = { git = "https://github.com/navicore/gamecode-prompt" }
gamecode-context = { git = "https://github.com/navicore/gamecode-context" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
aws-config = "1.6.3"
aws-sdk-bedrockruntime = "1.89.0"
aws-smithy-types = "1.2.8"
futures-util = "0.3"
