[package]
name = "gamecode-cli"
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["Ed Sweeney <ed@onextent.com>"]
description = "CLI for AWS Bedrock Anthropic Claude with gamecode-tools integration"

[dependencies]
gamecode-tools = { git = "https://github.com/navicore/gamecode-tools" }
gamecode-prompt = { git = "https://github.com/navicore/gamecode-prompt" }
gamecode-context = { git = "https://github.com/navicore/gamecode-context" }
gamecode-backend = { git = "https://github.com/navicore/gamecode-backend" }
gamecode-bedrock = { git = "https://github.com/navicore/gamecode-bedrock" }
#gamecode-bedrock = { path = "../gamecode-bedrock" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
