[package]
name = "gamecode-cli"
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["Ed Sweeney <ed@onextent.com>"]
description = "CLI for AWS Bedrock Anthropic Claude with MCP (Model Context Protocol) integration"

[dependencies]
gamecode-prompt = { git = "https://github.com/navicore/gamecode-prompt" }
gamecode-context = { git = "https://github.com/navicore/gamecode-context" }
gamecode-backend = { git = "https://github.com/navicore/gamecode-backend" }
gamecode-bedrock = { git = "https://github.com/navicore/gamecode-bedrock" }
tokio = { version = "1", features = ["full"] }
flag-rs = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1.18", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
home = "0.5"

[[bin]]
name = "gamecode"
path = "src/main.rs"
